--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        #JPQL 실행 확인
+        use_sql_comments: true
+
 logging:
 #  level:
 #    org.hibernate.sql: debug
