--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/querydsl
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:tcp://localhost/~/querydsl
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/testdb
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
 
 
   jpa:
