--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       hibernate:
         format_sql: true
         #JPQL 실행 확인
-        use_sql_comments: true
+#        use_sql_comments: true
 
 logging:
 #  level:
